CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
PROJECT(saveTheFish)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} "${CMAKE_SOURCE_DIR}/include/")

file(COPY "${CMAKE_SOURCE_DIR}/texture/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/texture/")
file(COPY "${CMAKE_SOURCE_DIR}/sfx/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/sfx/")
file(COPY "${CMAKE_SOURCE_DIR}/fonts/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/fonts/")

add_executable(saveTheFish "main.cpp")
target_link_libraries(saveTheFish ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_MIXER_LIBRARIES} ${SDL2_TTF_LIBRARIES})
